Added the ability to customize what version of java to launch.

--- a/mcsvradmin.properties
+++ b/mcsvradmin.properties
@@ -1,5 +1,9 @@
 # This is the config file for McSvrAdmin.
 
+# javaDir is the path to the Java installation we'll use. We'll use whatever is on the PATH by
+# default.
+javaDir=
+
 # mode can be "vanilla" or "forge"
 mode=forge
 
